added material in blog 3

--- a/blog-3.html
+++ b/blog-3.html
@@ -120,10 +120,27 @@
 						<h2>Youtube Channels</h2>
 						<ul>
 							<li><a href="https://www.youtube.com/@statquest">Statquest with Josh Starmer</a>: Simplifying statistics and data science concepts through nursery "children book"-style visuals and nursery rhymes.</li>
-							<li><a href="https://www.youtube.com/user/hugolarochelle">Hugo Larochelle</a>: Featuring a range of tutorials and lectures on machine learning and deep learning, presented by a leading AI researcher at Googles <i>DeepMind</i>.</li>
+							<li><a href="https://www.youtube.com/user/hugolarochelle">Hugo Larochelle</a>: Featuring a range of tutorials and lectures on machine learning and deep learning, presented by a leading AI researcher at Google's DeepMind.</li>
+							<li><a href="https://www.youtube.com/user/3blue1brown">3Blue1Brown</a>: Offers visually engaging videos for understanding key mathematical concepts. Contains a particularly useful playlist for understanding deep neural networks</li>
+							<li><a href="https://www.youtube.com/c/sentdex">Sentdex</a>: Provides practical programming tutorials with a focus on Python and its applications in machine learning and data analysis.</li>
+							<li><a href="https://www.youtube.com/user/TwoMinutePapers">Two Minute Papers</a>: Breaks down complex AI research papers into bite-sized two-minute videos, making cutting-edge research accessible to all.</li>
+							<li><a href="https://www.youtube.com/c/ArxivInsights">Arxiv Insights</a>: Anotother channel that delves into research papers, but explaining them in a more thorough manner whilst still being an approachable light watch.</li>
 						</ul>
 
-						<h2>Resources for beginners in Math, Statistics, and Programming</h2>
+
+						<h2>Insightful Podcasts</h2>
+						<p>For those who prefer audio learning or want to delve into discussions on AI while on the go, these podcasts are invaluable resources:</p>
+						<ul>
+
+
+							<li><a href="https://open.spotify.com/show/5M9yZpSyF1jc7uFp2MlhP9">MLG: Machine Learning Guide</a>: Machine learning audio course, teaching the fundamentals of machine learning and artificial intelligence. Covers models, math, languages and frameworks</li>
+							<li><a href="https://www.latent.space/podcast">Latent Space: The AI Engineer Podcast</a>: A must-listen for AI Engineers, this podcast discusses cutting-edge topics in Software 3.0, with news and interviews from industry leaders and innovators.</li>
+							
+							<li><a href="https://www.datasciencecentral.com/">Data Science Central</a>: Hosted by industry experts, this podcast covers a wide range of topics in data science and AI, making complex subjects accessible to a broader audience.</li>
+							<li><a href="https://twimlai.com/">TWIML AI Podcast</a>: Focused on bringing machine learning and AI to life, featuring interviews with top researchers and practitioners in the field.</li>
+						</ul>
+
+						<h2>Additional resources for Math, Statistics, and Programming</h2>
 						<p>If you're new to these foundational subjects, the following resources will help you build the necessary background to dive into AI:</p>
 						<ul>
 							<li><a href="https://www.khanacademy.org/math/statistics-probability/probability-library">Khan Academy: Probability and Statistics</a>: An interactive platform offering beginner-friendly lessons on probability and statistics, essential for understanding data in AI.</li>
