new blog, fixed downlaod button on all pages, new map

--- a/blog-3.html
+++ b/blog-3.html
@@ -61,6 +61,8 @@
 					<li><a href="index.html#work">Portfolio</a></li>
 					<li><a href="index.html#blog">Blog</a></li>
 					<li><a href="index.html#contact">Contact</a></li>
+					<li class="navigation__cv"><a href="CV.pdf" download="CV_Alborz_Sabet.pdf">Download CV</a></li>
+
 				</ul>
 			</nav>
 			<a class="navigation__cta button" href="CV.pdf" download="CV_Alborz_Sabet.pdf">Download CV</a>
