--- a/blog-list.html
+++ b/blog-list.html
@@ -77,6 +77,16 @@
 			</div>
 		</article>
 
+
+		<article class="blog-list__post">
+			<div class="blog__post-excerpt">
+				<h3>DTU Roboup 2022</h3>
+				<p>My first venture into competive robotics.</p>
+				<a class="transform-link" href="blog-4.html">Read full article</a>
+			</div>
+		</article>
+
+
         <!-- Additional articles would be listed here -->
 
 		
