--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 			
 			<div class="timeline-horizontal">
 				<div class="timeline-item">
-					<div class="timeline-dot"></div>
+					<div class="timeline-dot logo1"></div> <!-- For the first timeline item -->
+					
 					<div class="timeline-content">
 						<h3>Bsc Electrical Engineering</h3>
 						<span>2016-2019</span>
@@ -142,7 +143,7 @@
 				</div>
 	
 				<div class="timeline-item">
-					<div class="timeline-dot"></div>
+					<div class="timeline-dot logo2"></div> <!-- For the second timeline item -->
 					<div class="timeline-content">
 						<h3>Msc Autonomous Systems Engineering</h3>
 						<span>2021-2023</span>
@@ -158,7 +159,8 @@
 						<p>  </p>
 					</div>
 				</div>
-	
+
+				
 				<!-- Add more timeline items as needed -->
 
 
@@ -242,7 +244,7 @@
 					</div>
 					<div class="blog__post-excerpt">
 						<h3>The Emergence of AI Engineering: A Paradigm Shift in Tech</h3>
-						<p>Discover how the state of AI and software development is giving rise to AI Engineers, the new architects reshaping our digital landscape and marking a pivotal shift in the role of AI in technology.</p>
+						<p>The state of AI and software development is giving rise to AI Engineers, the new architects reshaping our digital landscape and marking a pivotal shift in the role of AI in technology.</p>
 						<a class="transform-link" href="blog-2.html">Read full article</a>
 					</div>
 				</article>
