--- a/blog-1.html
+++ b/blog-1.html
@@ -54,14 +54,15 @@
 	<!-- SECTION: Navigation -->
 	<div id="top" class="navigation">
 		<div class="navigation__wrapper wrapper--large">
-			<a class="navigation__logo logo" href="index.html">
-				<img src="assets/img/new.png" alt="Logo" class="logo-img"> </a>
-						<nav class="navigation__container">
+ 			<a class="navigation__logo logo" href="index.html">
+				<img src="assets/img/new.png" alt="Logo" class="logo-img"> </a>			<nav class="navigation__container">
 				<ul class="navigation__list">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="index.html#work">Portfolio</a></li>
 					<li><a href="index.html#blog">Blog</a></li>
 					<li><a href="index.html#contact">Contact</a></li>
+					<li class="navigation__cv"><a href="CV.pdf" download="CV_Alborz_Sabet.pdf">Download CV</a></li>
+
 				</ul>
 			</nav>
 			<a class="navigation__cta button" href="CV.pdf" download="CV_Alborz_Sabet.pdf">Download CV</a>
