--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<div class="timeline-content">
 						<h3>Bsc Electrical Engineering</h3>
 						<span>2016-2019</span>
-						<p>Norges teknisk-naturvitenskapelige universitet (NTNU)</p>
+						<p>Norges teknisk-naturvitenskapelige universitet</p>
 					</div>
 				</div>
 	
@@ -152,10 +152,19 @@
 				</div>
 
 				<div class="timeline-item">
-					<div class="timeline-dot"></div>
+					<div class="timeline-dot logo3"></div> <!-- For the second timeline item -->
 					<div class="timeline-content">
 						<h3>Freelance Software Development</h3>
-						<span>2023-Current</span>
+						<span>2023-2024</span>
+						<p>  </p>
+					</div>
+				</div>
+
+				<div class="timeline-item">
+					<div class="timeline-dot logo4"></div> <!-- For the second timeline item -->
+					<div class="timeline-content">
+						<h3>AI Engineer Lead</h3>
+						<span>2024-Current</span>
 						<p>  </p>
 					</div>
 				</div>
