fixed the rest of the backgrounds (about and timeline), and added better scroll indicator on timeline

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	</header>
 	<!-- END SECTION: Intro -->
 	<main role="main">
-		<!-- SECTION: About -->
+		<!-- SECTION: About #Todo: Add certfificatons on desktop view-->   
 		<section class="about">
 			<div class="about__wrapper wrapper--small">
 				<div class="about__content">
@@ -182,16 +182,15 @@
 				<!-- Add more timeline items as needed -->
 
 
-			    <!-- Static arrow -->
+			    <!-- Static arrow #Todo: Add dynamic arrow like the one in the intro section -->
 				<span class="scroll-indicator">→</span>
 			</div>
 		</div>
 
 		</section>
+		<!-- END SECTION: About -->
 		
-		<!-- SECTION: Work -->
-
-		<!-- SECTION: Work -->
+		<!-- SECTION: Work #Todo smaller sub-header in blurb --> 
 		<section id="work" class="work">
 			<h2 class="work__heading title">Latest Projects</h2>
 			<div class="work__wrapper wrapper--large">
