--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<div class="timeline-content">
 						<h3>Freelance Software Development</h3>
 						<span>2023-2024</span>
-						<p>  </p>
+						<p> Mini-A-Ture </p>
 					</div>
 				</div>
 
@@ -165,7 +165,7 @@
 					<div class="timeline-content">
 						<h3>AI Engineer Lead</h3>
 						<span>2024-Current</span>
-						<p>  </p>
+						<p> Senpage Consulting </p>
 					</div>
 				</div>
 
@@ -174,7 +174,7 @@
 					<div class="timeline-content">
 						<h3>DevOps Engineer</h3>
 						<span>2024-Current</span>
-						<p>  </p>
+						<p> Udviklings- og Forenklingsstyrelsen </p>
 					</div>
 				</div>	
 
@@ -182,7 +182,7 @@
 				<!-- Add more timeline items as needed -->
 
 
-			    <!-- Static arrow #Todo: Add dynamic arrow like the one in the intro section -->
+			    <!-- arrow #Todo: Add timeline hover?-->
 				<span class="scroll-indicator">→</span>
 			</div>
 		</div>
