--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<div class="timeline-dot logo4"></div> <!-- For the second timeline item -->
 					<div class="timeline-content">
 						<h3>AI Engineer Lead</h3>
-						<span>2024-Current</span>
+						<span>2023-2024</span>
 						<p> Senpage Consulting </p>
 					</div>
 				</div>
@@ -172,7 +172,7 @@
 				<div class="timeline-item">
 					<div class="timeline-dot logo5"></div> <!-- For the second timeline item -->
 					<div class="timeline-content">
-						<h3>DevOps Engineer</h3>
+						<h3>Machine Learning Engineer</h3>
 						<span>2024-Current</span>
 						<p> Udviklings- og Forenklingsstyrelsen </p>
 					</div>
